--- a/bookshelf/css/style.css
+++ b/bookshelf/css/style.css
@@ -103,6 +103,7 @@ table tr th {
 	border-bottom-width: 1px !important;
 }
 
+
 /* display */
 div.sidebar {
 	position: fixed;
@@ -240,10 +241,15 @@ a#toggle-sidebar.rotate {
 /* hljs reset */
 .hljs {
 	background: none;
-	padding: 0;
+	/*padding: 0;*/
 	color: none;
 	white-space: pre;
 	overflow-x: auto;
+	padding: 1.25em 1.5em;
+}
+
+.content pre {
+	padding: 0;
 }
 
 /* responsive */
